--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "simplesp",
   "homepage": "https://jordikim.github.io/simplesp",
   "version": "0.1.0",
   "private": true,
